changing step layouts, changing step edit menu layou, changing behavior on drag endpoint, fixing jstree more options from wrapping around

--- a/vipr-portal/portal/public/stylesheets/jstreestyle.less
+++ b/vipr-portal/portal/public/stylesheets/jstreestyle.less
@@ -393,6 +393,7 @@ background-color : #ffffff !important;
   line-height: 24px;
 }
 .jstree-default .jstree-icon:empty {
+  float: left;
   width: 24px;
   height: 24px;
   line-height: 24px;
